--- a/index-START.html
+++ b/index-START.html
@@ -85,8 +85,10 @@ window.addEventListener('keydown', playSound);
 
     // u cant event listener a nodes list. u must loop over each element n attach an event listener
 
- 
+  // comment moi
 
+  //comt nua
+  
   </script>
 
 
